--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cutscreen GoT</title>
+        <title>Cutscreen GoT</title>
+
         <link
             rel="shortcut icon"
             href="/assets/icons8-game-of-thrones-128-BSQ2Qk0_.png"
@@ -42,7 +43,7 @@
 
             <div class="layer">
                 <div class="layer__link">
-                    <a href="./public/main.html">Нажми меня</a>
+                    <a href="/main.html">Нажми меня</a>
                 </div>
             </div>
         </div>
