--- a/quiz.html
+++ b/quiz.html
@@ -9,8 +9,7 @@
     <link
     rel="shortcut icon"
     href="./images/icons8-game-of-thrones-128.png"
-    type="image/png"
-  />
+    type="image/png"/>
 </head>
 
 <body>
