--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./styles/main.css" />
   <link rel="stylesheet" href="./styles/forms.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <title>Персонажи Игры престолов</title>
+  <title>Железный трон или жизнь</title>
   <link rel="shortcut icon" href="./images/icons8-game-of-thrones-128.png" type="image/png" />
 </head>
 
